Bug 504721 - Cannot switch to other activities using switching shortcuts
Summary: Cannot switch to other activities using switching shortcuts
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: activities (other bugs)
Version First Reported In: 6.3.90
Platform: Other Linux
: VHI major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-05-24 06:34 UTC by Bacteria
Modified: 2025-05-27 19:43 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bacteria 2025-05-24 06:34:27 UTC
Cannot switch to other activites only the current one to be in focus

SUMMARY
I have 2 activities. On login I am on the "Default" one. No way to switch to the 2nd one. I have tried using activity pager, activity switcher, walk through activities shortcut. I feel like the switching logic is broken. 

I have deleted all activities and created them again but still unable to fix this. When I delete the current activity, it switches me to the next active one but still can't switch.

I even tried assigning a dedicated shortcut to switch to an activity and even that doesn't work.

STEPS TO REPRODUCE
1. Have a at least 2 running activities
2. Try to switch activity using any of various UI or keyboard shortcuts

OBSERVED RESULT
Nothing happens, kwin stays on the current activity

EXPECTED RESULT
Kwin should switch to the other activity

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.90
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 4800H with Radeon Graphics
Memory: 32 GiB of RAM (30.7 GiB usable)
Graphics Processor: AMD Radeon Graphics
Comment 1 Nate Graham 2025-05-27 17:33:02 UTC
I can confirm all activity-switching keyboard shortcuts appear to be broken now.

I can however switch using the Activity Pager, so switching in general isn't broken; just the shortcuts.
Comment 2 Bug Janitor Service 2025-05-27 19:01:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kactivitymanagerd/-/merge_requests/85
Comment 3 Zamundaaa 2025-05-27 19:39:38 UTC
Git commit 9ac3827ce02d3e2940083e958b77424c4c25e601 by Xaver Hugl.
Committed on 27/05/2025 at 19:00.
Pushed by zamundaaa into branch 'master'.

service/Application: make serviceVersion a slot again

Fixes a regression caused by fb2c4167c782ef62b7f5f54a2e0d94bf9593ec87

M  +1    -1    src/service/Application.h

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/9ac3827ce02d3e2940083e958b77424c4c25e601
Comment 4 Zamundaaa 2025-05-27 19:41:34 UTC
Git commit 8672942d9011925c15cc76cdb057b753def4efb0 by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 27/05/2025 at 19:39.
Pushed by zamundaaa into branch 'Plasma/6.4'.

service/Application: make serviceVersion a slot again

Fixes a regression caused by fb2c4167c782ef62b7f5f54a2e0d94bf9593ec87


(cherry picked from commit 9ac3827ce02d3e2940083e958b77424c4c25e601)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +1    -1    src/service/Application.h

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/8672942d9011925c15cc76cdb057b753def4efb0