service/Application: make serviceVersion a slot again

Fixes a regression caused by fb2c4167c782ef62b7f5f54a2e0d94bf9593ec87

BUG: 504721


(cherry picked from commit 9ac3827ce02d3e2940083e958b77424c4c25e601)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>